Added Cellpose Nuclear Segmentation Option

--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -165,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-25 09:20:32,892 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n"
+      "2022-03-08 11:44:51,441 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n"
      ]
     }
    ],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,12 +375,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1. Enter the filepath of the folder containing the images to analyze\n",
-    "filepath = '' #IF USING A PC: add r before string ie. r'/Users/robertwelch/Desktop/' instead of '/Users/robertwelch/Desktop/'\n",
+    "filepath = '/Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages' #IF USING A PC: add r before string ie. r'/Users/robertwelch/Desktop/' instead of '/Users/robertwelch/Desktop/'\n",
     "\n",
     "#2. Run cell segmentation with GPU?:\n",
     "use_gpu = False # if available, set to: True. Will automatically use CPU if no GPU is found.\n",
@@ -392,12 +392,19 @@
     "\n",
     "#4. Cellpose parameters, useful only if cellular segmentation is failing\n",
     "cell_diameter = 200 #Estimate of cell_diamter [pixels] - I find ~200 works well and is faster, despite being an overestimate\n",
-    "flow_threshold_cyto = 0 # Increase if cell segmentation if missing cells (usually around 0-0.9)\n",
+    "flow_threshold_cyto = 0 # decrease if cell segmentation if missing cells (usually around 0-0.9)\n",
     "\n",
-    "#5. Nuclei Segmentation, useful only if nuclei segmentation is failing\n",
-    "nuclei_threshold = 0.06 #Threshold for nuclei segmentation. (Increase if )\n",
+    "#Nuclei Segmentation\n",
+    "method = 'CELLPOSE' #set to 'CELLPOSE' or 'GLOBAL'. CELLPOSE is more robust to nuclei saturation but slower.\n",
     "\n",
-    "#6. Image Export resolution\n",
+    "#5. GLOBAL Nuclei Segmentation, adjust if method = 'GLOBAL'\n",
+    "nuclei_threshold = 0.06 #Threshold for nuclei segmentation.\n",
+    "\n",
+    "#6. CELLOPOSE Nuclei Segmentation, adjust parameters if using 'CELLPOSE' method\n",
+    "nuclei_diameter = 35 #estimate of nuclei_diameter in pixels\n",
+    "nuclei_flow = 0 #decrease if cell segmentation if missing cells (usually around 0-0.9)\n",
+    "\n",
+    "#7. Image Export resolution\n",
     "output_images = True #True or False. If True, will save segmentation images in Results folder. Will slow down processing.\n",
     "resolution = 200 #pixels per inch. Higher resolution will result in slower processing and greater storage requirements."
    ]
@@ -411,9 +418,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Images Analyzed: 0\n",
+      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages/WellC06_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0011.nd2\n",
+      "2022-03-08 12:23:14,151 [INFO] >>>> using CPU\n",
+      "2022-03-08 12:23:14,262 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-08 12:23:49,323 [INFO] >>>> TOTAL TIME 35.06 sec\n",
+      "2022-03-08 12:23:49,336 [INFO] >>>> using CPU\n",
+      "2022-03-08 12:23:49,486 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-08 12:23:54,264 [INFO] >>>> TOTAL TIME 4.78 sec\n",
+      "Images Analyzed: 1\n",
+      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages/WellC09_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0008.nd2\n",
+      "2022-03-08 12:24:00,116 [INFO] >>>> using CPU\n",
+      "2022-03-08 12:24:00,235 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-08 12:24:37,540 [INFO] >>>> TOTAL TIME 37.31 sec\n",
+      "2022-03-08 12:24:37,562 [INFO] >>>> using CPU\n",
+      "2022-03-08 12:24:37,716 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-08 12:24:42,547 [INFO] >>>> TOTAL TIME 4.83 sec\n",
+      "Images Analyzed: 2\n",
+      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages/WellC07_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0010.nd2\n",
+      "2022-03-08 12:24:48,373 [INFO] >>>> using CPU\n",
+      "2022-03-08 12:24:48,493 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-08 12:25:25,236 [INFO] >>>> TOTAL TIME 36.74 sec\n",
+      "2022-03-08 12:25:25,249 [INFO] >>>> using CPU\n",
+      "2022-03-08 12:25:25,402 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-08 12:25:29,984 [INFO] >>>> TOTAL TIME 4.58 sec\n",
+      "Images Analyzed: 3\n",
+      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages/WellC05_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0012.nd2\n",
+      "2022-03-08 12:25:35,981 [INFO] >>>> using CPU\n",
+      "2022-03-08 12:25:36,090 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-08 12:26:14,603 [INFO] >>>> TOTAL TIME 38.51 sec\n",
+      "2022-03-08 12:26:14,616 [INFO] >>>> using CPU\n",
+      "2022-03-08 12:26:14,768 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-08 12:26:19,491 [INFO] >>>> TOTAL TIME 4.72 sec\n",
+      "Finished, all images analyzed.\n"
+     ]
+    }
+   ],
    "source": [
     "pathND2 = filepath +'/*.nd2'\n",
     "counter = 0\n",
@@ -429,9 +476,14 @@
     "                                                min_percentile_nuclei=0,max_percentile_nuclei=100,max_intensity_projection=True)\n",
     "\n",
     "    #Create Nuclei Mask\n",
-    "    mask_nuclei = nuclei_segmentation(stack_with_sat,thresh_nuclei=nuclei_threshold,show_results=False)\n",
-    "    #mask_nuclei = nuclei_segmentation_cellpose(stack_with_sat,diameter = 30,flow_threshold=0.9,use_gpu = use_gpu,show_results = False)  \n",
-    "\n",
+    "    if method == 'CELLPOSE':\n",
+    "        mask_nuclei = nuclei_segmentation_cellpose(stack_with_sat,diameter = nuclei_diameter,flow_threshold=nuclei_flow,use_gpu = use_gpu,show_results = False)\n",
+    "    elif method == 'GLOBAL':\n",
+    "        mask_nuclei = nuclei_segmentation(stack_with_sat,thresh_nuclei=nuclei_threshold,show_results=False)\n",
+    "    else:\n",
+    "        print('Nuclei Method not chosen correctly')\n",
+    "        break\n",
+    "      \n",
     "    #Create Cell Mask\n",
     "    mask_cyto = cell_segmentation(stack_with_sat,diameter = cell_diameter,flow_threshold=flow_threshold_cyto,use_gpu = use_gpu,show_results = False)\n",
     "\n",
@@ -499,7 +551,7 @@
     "        ax[0].set_title('Cell Segmentation')\n",
     "        #imsave(new_storage_directory+'/cell_'+image_name_tiff,mark_boundaries(stack_with_sat[1,:,:],mask_cyto))\n",
     "\n",
-    "        ax[1].imshow(mark_boundaries(stack_without_sat[2,:,:],label(mask_nuclei)))\n",
+    "        ax[1].imshow(mark_boundaries(stack_with_sat[2,:,:],label(mask_nuclei)))\n",
     "        ax[1].set_title('Nuclei Segmentation')\n",
     "        #imsave(new_storage_directory+'/nuclei_'+image_name_tiff,mark_boundaries(stack_with_sat[2,:,:],mask_nuclei.astype('uint16')))\n",
     "\n",
