--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -18,118 +18,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (1.20.1)\n",
-      "Requirement already satisfied: nd2reader in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (3.3.0)\n",
-      "Requirement already satisfied: xmltodict>=0.9.2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from nd2reader) (0.12.0)\n",
-      "Requirement already satisfied: six>=1.4 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from nd2reader) (1.15.0)\n",
-      "Requirement already satisfied: numpy>=1.14 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from nd2reader) (1.20.1)\n",
-      "Requirement already satisfied: pims>=0.3.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from nd2reader) (0.5)\n",
-      "Requirement already satisfied: slicerator>=0.9.8 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pims>=0.3.0->nd2reader) (1.0.0)\n",
-      "Requirement already satisfied: scikit-image==0.19.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.19.1)\n",
-      "Requirement already satisfied: imageio>=2.4.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (2.9.0)\n",
-      "Requirement already satisfied: networkx>=2.2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (2.5)\n",
-      "Requirement already satisfied: tifffile>=2019.7.26 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (2022.2.9)\n",
-      "Requirement already satisfied: numpy>=1.17.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (1.20.1)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (20.8)\n",
-      "Requirement already satisfied: PyWavelets>=1.1.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (1.1.1)\n",
-      "Requirement already satisfied: scipy>=1.4.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (1.6.0)\n",
-      "Requirement already satisfied: pillow!=7.1.0,!=7.1.1,!=8.3.0,>=6.1.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from scikit-image==0.19.1) (8.1.0)\n",
-      "Requirement already satisfied: decorator>=4.3.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from networkx>=2.2->scikit-image==0.19.1) (4.4.2)\n",
-      "Requirement already satisfied: pyparsing>=2.0.2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from packaging>=20.0->scikit-image==0.19.1) (2.4.7)\n",
-      "Requirement already satisfied: cellpose in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.7.2)\n",
-      "Requirement already satisfied: opencv-python-headless in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (4.5.5.62)\n",
-      "Requirement already satisfied: numpy>=1.20.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (1.20.1)\n",
-      "Requirement already satisfied: natsort in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (8.0.2)\n",
-      "Requirement already satisfied: fastremap in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (1.12.2)\n",
-      "Requirement already satisfied: torch-optimizer in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (0.3.0)\n",
-      "Requirement already satisfied: torch>=1.6 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (1.8.0)\n",
-      "Requirement already satisfied: scipy in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (1.6.0)\n",
-      "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (4.59.0)\n",
-      "Requirement already satisfied: numba in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (0.53.0)\n",
-      "Requirement already satisfied: tifffile in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (2022.2.9)\n",
-      "Requirement already satisfied: edt in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from cellpose) (2.1.1)\n",
-      "Requirement already satisfied: typing-extensions in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from torch>=1.6->cellpose) (4.0.1)\n",
-      "Requirement already satisfied: llvmlite<0.37,>=0.36.0rc1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from numba->cellpose) (0.36.0)\n",
-      "Requirement already satisfied: setuptools in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from numba->cellpose) (49.2.1)\n",
-      "Requirement already satisfied: pytorch-ranger>=0.1.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from torch-optimizer->cellpose) (0.1.1)\n",
-      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (1.4.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pandas) (2.8.1)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pandas) (2020.5)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pandas) (1.20.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.15.0)\n",
-      "Requirement already satisfied: glob2 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (0.7)\n",
-      "Collecting os-sys\n",
-      "  Using cached os_sys-2.1.4-py3-none-any.whl (15.6 MB)\n",
-      "Requirement already satisfied: Send2Trash in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (1.5.0)\n",
-      "Collecting progressbar\n",
-      "  Using cached progressbar-2.5.tar.gz (10 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: matplotlib in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (3.3.3)\n",
-      "Requirement already satisfied: requests in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (2.25.1)\n",
-      "Requirement already satisfied: pytest in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (6.2.5)\n",
-      "Collecting mysql-connector\n",
-      "  Using cached mysql-connector-2.2.9.tar.gz (11.9 MB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting requests-download\n",
-      "  Using cached requests_download-0.1.2-py2.py3-none-any.whl (5.5 kB)\n",
-      "Collecting nltk<4.0,>=3.2\n",
-      "  Downloading nltk-3.7-py3-none-any.whl (1.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m12.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting os-sys-php\n",
-      "  Using cached os_sys_php-2019.10.13-py3-none-any.whl (38.6 MB)\n",
-      "Collecting geocoder\n",
-      "  Using cached geocoder-1.38.1-py2.py3-none-any.whl (98 kB)\n",
-      "Collecting pygubu\n",
-      "  Using cached pygubu-0.20-py3-none-any.whl (64 kB)\n",
-      "Requirement already satisfied: pytz in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (2020.5)\n",
-      "Collecting beautifulsoup4\n",
-      "  Downloading beautifulsoup4-4.10.0-py3-none-any.whl (97 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m97.4/97.4 KB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (1.20.1)\n",
-      "Collecting Django\n",
-      "  Using cached Django-4.0.2-py3-none-any.whl (8.0 MB)\n",
-      "Collecting pyyaml<5.2,>=5.1\n",
-      "  Using cached PyYAML-5.1.2.tar.gz (265 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting tuspy\n",
-      "  Using cached tuspy-0.2.5-py3-none-any.whl (12 kB)\n",
-      "Requirement already satisfied: six in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (1.15.0)\n",
-      "Collecting PyInstaller\n",
-      "  Using cached pyinstaller-4.9-py3-none-macosx_10_13_universal2.whl (1.6 MB)\n",
-      "Collecting auto-py-to-exe\n",
-      "  Downloading auto_py_to_exe-2.17.0-py2.py3-none-any.whl (89 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m89.5/89.5 KB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting sqlparse\n",
-      "  Using cached sqlparse-0.4.2-py3-none-any.whl (42 kB)\n",
-      "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (4.59.0)\n",
-      "Collecting pyspeedtest\n",
-      "  Using cached pyspeedtest-1.2.7.tar.gz (6.8 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting wifi\n",
-      "  Using cached wifi-0.3.8.tar.gz (11 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting pypiwin32\n",
-      "  Using cached pypiwin32-223-py3-none-any.whl (1.7 kB)\n",
-      "Requirement already satisfied: pint>=0.8.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (0.18)\n",
-      "Requirement already satisfied: tornado in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from os-sys) (6.1)\n",
-      "Collecting netifaces\n",
-      "  Using cached netifaces-0.11.0-cp39-cp39-macosx_10_15_x86_64.whl (12 kB)\n",
-      "Collecting extract-zip\n",
-      "  Using cached extract_zip-1.0.0-py3-none-any.whl (2.6 kB)\n",
-      "Collecting progress\n",
-      "  Using cached progress-1.6.tar.gz (7.8 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting os-sys\n",
-      "  Downloading os_sys-2.1.3-py3-none-any.whl (15.5 MB)\n",
-      "\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.9/15.5 MB\u001b[0m \u001b[31m15.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install numpy\n",
     "!pip install nd2reader\n",
@@ -150,25 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/skimage/io/manage_plugins.py:23: UserWarning: Your installed pillow version is < 8.1.2. Several security issues (CVE-2021-27921, CVE-2021-25290, CVE-2021-25291, CVE-2021-25293, and more) have been fixed in pillow 8.1.2 or higher. We recommend to upgrade this library.\n",
-      "  from .collection import imread_collection_wrapper\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-03-08 11:44:51,441 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -194,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,12 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1. Enter the filepath of the folder containing the images to analyze\n",
-    "filepath = '/Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages' #IF USING A PC: add r before string ie. r'/Users/robertwelch/Desktop/' instead of '/Users/robertwelch/Desktop/'\n",
+    "filepath = '/Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/Images/oneImage' #IF USING A PC: add r before string ie. r'/Users/robertwelch/Desktop/' instead of '/Users/robertwelch/Desktop/'\n",
     "\n",
     "#2. Run cell segmentation with GPU?:\n",
     "use_gpu = False # if available, set to: True. Will automatically use CPU if no GPU is found.\n",
@@ -418,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -426,37 +299,21 @@
      "output_type": "stream",
      "text": [
       "Images Analyzed: 0\n",
-      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages/WellC06_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0011.nd2\n",
-      "2022-03-08 12:23:14,151 [INFO] >>>> using CPU\n",
-      "2022-03-08 12:23:14,262 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-08 12:23:49,323 [INFO] >>>> TOTAL TIME 35.06 sec\n",
-      "2022-03-08 12:23:49,336 [INFO] >>>> using CPU\n",
-      "2022-03-08 12:23:49,486 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-08 12:23:54,264 [INFO] >>>> TOTAL TIME 4.78 sec\n",
+      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/Images/oneImage/WellB04_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0002.nd2\n",
+      "2022-03-14 15:30:46,125 [INFO] >>>> using CPU\n",
+      "2022-03-14 15:30:46,235 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-14 15:31:20,634 [INFO] >>>> TOTAL TIME 34.40 sec\n",
+      "2022-03-14 15:31:20,650 [INFO] >>>> using CPU\n",
+      "2022-03-14 15:31:20,807 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-14 15:31:25,183 [INFO] >>>> TOTAL TIME 4.38 sec\n",
       "Images Analyzed: 1\n",
-      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages/WellC09_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0008.nd2\n",
-      "2022-03-08 12:24:00,116 [INFO] >>>> using CPU\n",
-      "2022-03-08 12:24:00,235 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-08 12:24:37,540 [INFO] >>>> TOTAL TIME 37.31 sec\n",
-      "2022-03-08 12:24:37,562 [INFO] >>>> using CPU\n",
-      "2022-03-08 12:24:37,716 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-08 12:24:42,547 [INFO] >>>> TOTAL TIME 4.83 sec\n",
-      "Images Analyzed: 2\n",
-      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages/WellC07_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0010.nd2\n",
-      "2022-03-08 12:24:48,373 [INFO] >>>> using CPU\n",
-      "2022-03-08 12:24:48,493 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-08 12:25:25,236 [INFO] >>>> TOTAL TIME 36.74 sec\n",
-      "2022-03-08 12:25:25,249 [INFO] >>>> using CPU\n",
-      "2022-03-08 12:25:25,402 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-08 12:25:29,984 [INFO] >>>> TOTAL TIME 4.58 sec\n",
-      "Images Analyzed: 3\n",
-      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/ErrorImages/WellC05_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0012.nd2\n",
-      "2022-03-08 12:25:35,981 [INFO] >>>> using CPU\n",
-      "2022-03-08 12:25:36,090 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-08 12:26:14,603 [INFO] >>>> TOTAL TIME 38.51 sec\n",
-      "2022-03-08 12:26:14,616 [INFO] >>>> using CPU\n",
-      "2022-03-08 12:26:14,768 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-08 12:26:19,491 [INFO] >>>> TOTAL TIME 4.72 sec\n",
+      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/Images/oneImage/WellB02_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0000.nd2\n",
+      "2022-03-14 15:31:29,953 [INFO] >>>> using CPU\n",
+      "2022-03-14 15:31:30,060 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-14 15:32:03,903 [INFO] >>>> TOTAL TIME 33.84 sec\n",
+      "2022-03-14 15:32:03,918 [INFO] >>>> using CPU\n",
+      "2022-03-14 15:32:04,049 [INFO] ~~~ FINDING MASKS ~~~\n",
+      "2022-03-14 15:32:08,715 [INFO] >>>> TOTAL TIME 4.67 sec\n",
       "Finished, all images analyzed.\n"
      ]
     }
@@ -481,7 +338,7 @@
     "    elif method == 'GLOBAL':\n",
     "        mask_nuclei = nuclei_segmentation(stack_with_sat,thresh_nuclei=nuclei_threshold,show_results=False)\n",
     "    else:\n",
-    "        print('Nuclei Method not chosen correctly')\n",
+    "        print('Nuclei Method not chosen correctly - enter as CELLPOSE or GLOBAL')\n",
     "        break\n",
     "      \n",
     "    #Create Cell Mask\n",
@@ -565,6 +422,13 @@
     "        plt.close('all')\n",
     "print('Finished, all images analyzed.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
