Updated to work on nested directories

--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -39,9 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/skimage/io/manage_plugins.py:23: UserWarning: Your installed pillow version is < 8.1.2. Several security issues (CVE-2021-27921, CVE-2021-25290, CVE-2021-25291, CVE-2021-25293, and more) have been fixed in pillow 8.1.2 or higher. We recommend to upgrade this library.\n",
+      "  from .collection import imread_collection_wrapper\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-04-21 11:46:02,432 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n",
+      "2022-04-21 11:46:02,507 [INFO] NumExpr defaulting to 8 threads.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -67,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,12 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1. Enter the filepath of the folder containing the images to analyze\n",
-    "filepath = '/Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/Images/oneImage' #IF USING A PC: add r before string ie. r'/Users/robertwelch/Desktop/' instead of '/Users/robertwelch/Desktop/'\n",
+    "folder_path = '/Users/robertwelch/Downloads/Multi_layer_test' #IF USING A PC: add r before string ie. r'/Users/robertwelch/Desktop/' instead of '/Users/robertwelch/Desktop/'\n",
     "\n",
     "#2. Run cell segmentation with GPU?:\n",
     "use_gpu = False # if available, set to: True. Will automatically use CPU if no GPU is found.\n",
@@ -291,45 +308,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Images Analyzed: 0\n",
-      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/Images/oneImage/WellB04_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0002.nd2\n",
-      "2022-03-14 15:30:46,125 [INFO] >>>> using CPU\n",
-      "2022-03-14 15:30:46,235 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-14 15:31:20,634 [INFO] >>>> TOTAL TIME 34.40 sec\n",
-      "2022-03-14 15:31:20,650 [INFO] >>>> using CPU\n",
-      "2022-03-14 15:31:20,807 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-14 15:31:25,183 [INFO] >>>> TOTAL TIME 4.38 sec\n",
-      "Images Analyzed: 1\n",
-      "Analyzing: /Users/robertwelch/Desktop/SciLifeLab/BIIF Projects/Chiara Project - GFP Dot Counting/Images/oneImage/WellB02_Channel Kinetix Single band EGFP, Kinetix Single  Hoechst_Seq0000.nd2\n",
-      "2022-03-14 15:31:29,953 [INFO] >>>> using CPU\n",
-      "2022-03-14 15:31:30,060 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-14 15:32:03,903 [INFO] >>>> TOTAL TIME 33.84 sec\n",
-      "2022-03-14 15:32:03,918 [INFO] >>>> using CPU\n",
-      "2022-03-14 15:32:04,049 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2022-03-14 15:32:08,715 [INFO] >>>> TOTAL TIME 4.67 sec\n",
-      "Finished, all images analyzed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pathND2 = filepath +'/*.nd2'\n",
-    "counter = 0\n",
+    "def find_image_paths(folder_path):\n",
+    "    image_paths = []\n",
+    "    image_roots = []\n",
+    "    for root, _, files in os.walk(folder_path):\n",
+    "        for name in files:\n",
+    "            if name.endswith('.nd2'):\n",
+    "                image_paths.append(os.path.join(root,name))\n",
+    "                image_roots.append(root)\n",
+    "    return image_paths, image_roots\n",
     "\n",
-    "for filename in glob.glob(pathND2):\n",
-    "    print('Images Analyzed:',counter)\n",
-    "    print('Analyzing:',filename)\n",
-    "    counter += 1\n",
+    "image_paths,image_roots = find_image_paths(folder_path)\n",
+    "\n",
+    "counter = 0 \n",
+    "\n",
+    "#Loop to anaylyze all images\n",
+    "for counter in range(len(image_paths)):\n",
+    "    image_path = image_paths[counter]\n",
+    "    image_root = image_roots[counter]\n",
+    "\n",
+    "    print('Images Analyzed:',counter,'out of',len(image_paths))\n",
+    "    print('Analyzing:',image_path)\n",
+    "\n",
+    "    \n",
+    "\n",
     "\n",
     "    #Open Max Intensity Projection Image stack with formatting for cellpose\n",
     "    #stack_with_sat has cytoplasm channel clipped to 95% max intensity, stack_without_sat does not\n",
-    "    stack_with_sat,stack_without_sat = import_stack(filename,min_percentile_cyto=0,max_percentile_cyto=95,\n",
+    "    stack_with_sat,stack_without_sat = import_stack(image_path,min_percentile_cyto=0,max_percentile_cyto=95,\n",
     "                                                min_percentile_nuclei=0,max_percentile_nuclei=100,max_intensity_projection=True)\n",
     "\n",
     "    #Create Nuclei Mask\n",
@@ -363,19 +373,19 @@
     "    num_cells_with_proteins = len(data_holder)\n",
     "    cells_without_proteins = num_cells-num_cells_with_proteins\n",
     "    \n",
-    "    #Add zeros for segmented cells with no detectable LC3 dots\n",
+    "    # #Add zeros for segmented cells with no detectable LC3 dots\n",
     "    zero_pad = pd.DataFrame(np.zeros([cells_without_proteins,2]),columns=data_holder.columns)\n",
     "    proteins_in_each_cell = pd.concat([data_holder,zero_pad],ignore_index = True)\n",
     "    proteins_in_each_cell = proteins_in_each_cell['intensity_min'] # Only output number of proteins, discard cell ID label\n",
     "    proteins_in_each_cell = pd.DataFrame(proteins_in_each_cell) #Re-format to Dataframe object\n",
     "    \n",
     "    #Results header string - uses number tag before .nd2 at end of file name\n",
-    "    split_filename = filename.split('/')\n",
-    "    file_number = split_filename[-1][:-4]\n",
+    "    split_image_path = image_path.split('/')\n",
+    "    file_number = split_image_path[-1][:-4]\n",
     "    header = ['LC3+ Count: Image {0}'.format(file_number)]\n",
     "\n",
     "    #If First file, write an excel file to store excel results\n",
-    "    new_storage_directory = os.path.join(filepath, filepath+'/Results')\n",
+    "    new_storage_directory = os.path.join(image_root, image_root+'/Results')\n",
     "    results_path = new_storage_directory+'/LC3 Counts.xlsx'\n",
     "\n",
     "    #Check if storage directory exits, if not make one\n",
@@ -401,8 +411,7 @@
     "        fig,ax = plt.subplots(1,3)\n",
     "        fig.set_size_inches(20,20)\n",
     "        \n",
-    "        image_name = filename.split('/')\n",
-    "        image_name_tiff = image_name[-1].replace('.nd2','.tiff')\n",
+    "        image_name_tiff = split_image_path[-1].replace('.nd2','.tiff')\n",
     "\n",
     "        ax[0].imshow(mark_boundaries(stack_with_sat[1,:,:],mask_cyto))\n",
     "        ax[0].set_title('Cell Segmentation')\n",
@@ -418,17 +427,10 @@
     "\n",
     "        #If you want to speed up significantly, reduce dpi (resolution of images or comment out saving image results)\n",
     "        plt.tight_layout()\n",
-    "        plt.savefig(new_storage_directory+'/results-{0}.tiff'.format(filename[-8:-4]),dpi = resolution)\n",
+    "        plt.savefig(new_storage_directory+'/results-{0}.tiff'.format(file_number),dpi = resolution)\n",
     "        plt.close('all')\n",
     "print('Finished, all images analyzed.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
