updated tiff image save path for windows

--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-04-21 11:46:02,432 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n",
-      "2022-04-21 11:46:02,507 [INFO] NumExpr defaulting to 8 threads.\n"
+      "2022-04-25 14:49:46,055 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n",
+      "2022-04-25 14:49:46,192 [INFO] NumExpr defaulting to 8 threads.\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
     "from skimage.io import imsave\n",
     "import pandas as pd\n",
     "import glob\n",
-    "import os"
+    "import os\n"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
     "    header = ['LC3+ Count: Image {0}'.format(file_number)]\n",
     "\n",
     "    #If First file, write an excel file to store excel results\n",
-    "    new_storage_directory = os.path.join(image_root, image_root+'/Results')\n",
+    "    new_storage_directory = image_root+'/Results'\n",
     "    results_path = new_storage_directory+'/LC3 Counts.xlsx'\n",
     "\n",
     "    #Check if storage directory exits, if not make one\n",
@@ -431,6 +431,13 @@
     "        plt.close('all')\n",
     "print('Finished, all images analyzed.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
