Updated to work on windows or mac

--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-04-25 14:49:46,055 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n",
-      "2022-04-25 14:49:46,192 [INFO] NumExpr defaulting to 8 threads.\n"
+      "2022-04-25 17:18:48,218 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n",
+      "2022-04-25 17:18:48,351 [INFO] NumExpr defaulting to 8 threads.\n"
      ]
     }
    ],
@@ -69,9 +69,7 @@
     "from skimage.filters import gaussian\n",
     "from skimage.morphology import disk,white_tophat,disk,remove_small_objects\n",
     "from skimage.measure import label,regionprops_table\n",
-    "from skimage.io import imsave\n",
     "import pandas as pd\n",
-    "import glob\n",
     "import os\n"
    ]
   },
@@ -84,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,13 +378,19 @@
     "    proteins_in_each_cell = pd.DataFrame(proteins_in_each_cell) #Re-format to Dataframe object\n",
     "    \n",
     "    #Results header string - uses number tag before .nd2 at end of file name\n",
-    "    split_image_path = image_path.split('/')\n",
+    "    # if running on max\n",
+    "    if os.name == 'posix':\n",
+    "        split_image_path = image_path.split('/')\n",
+    "    # If running on windows\n",
+    "    elif os.name == 'nt':\n",
+    "        split_image_path = image_path.split('\\\\')\n",
+    "\n",
     "    file_number = split_image_path[-1][:-4]\n",
     "    header = ['LC3+ Count: Image {0}'.format(file_number)]\n",
     "\n",
     "    #If First file, write an excel file to store excel results\n",
-    "    new_storage_directory = image_root+'/Results'\n",
-    "    results_path = new_storage_directory+'/LC3 Counts.xlsx'\n",
+    "    new_storage_directory = os.path.join(image_root,'Results')\n",
+    "    results_path = os.path.join(new_storage_directory,'LC3 Counts.xlsx')\n",
     "\n",
     "    #Check if storage directory exits, if not make one\n",
     "    if os.path.exists(new_storage_directory):\n",
@@ -427,17 +431,10 @@
     "\n",
     "        #If you want to speed up significantly, reduce dpi (resolution of images or comment out saving image results)\n",
     "        plt.tight_layout()\n",
-    "        plt.savefig(new_storage_directory+'/results-{0}.tiff'.format(file_number),dpi = resolution)\n",
+    "        plt.savefig(os.path.join(new_storage_directory+'results-{0}.tiff'.format(file_number)),dpi = resolution)\n",
     "        plt.close('all')\n",
     "print('Finished, all images analyzed.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
