--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install numpy\n",
-    "!pip install nd2reader\n",
-    "!pip install scikit-image==0.19.1\n",
-    "!pip install cellpose\n",
-    "!pip install pandas\n",
-    "!pip install glob2\n",
-    "!pip install os-sys\n",
-    "!pip install matplotlib"
+    "# !pip install numpy\n",
+    "# !pip install nd2reader\n",
+    "# !pip install scikit-image==0.19.1\n",
+    "# !pip install cellpose\n",
+    "# !pip install pandas\n",
+    "# !pip install glob2\n",
+    "# !pip install os-sys\n",
+    "# !pip install matplotlib"
    ]
   },
   {
@@ -39,26 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/skimage/io/manage_plugins.py:23: UserWarning: Your installed pillow version is < 8.1.2. Several security issues (CVE-2021-27921, CVE-2021-25290, CVE-2021-25291, CVE-2021-25293, and more) have been fixed in pillow 8.1.2 or higher. We recommend to upgrade this library.\n",
-      "  from .collection import imread_collection_wrapper\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-04-25 17:18:48,218 [INFO] WRITING LOG OUTPUT TO /Users/robertwelch/.cellpose/run.log\n",
-      "2022-04-25 17:18:48,351 [INFO] NumExpr defaulting to 8 threads.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -82,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +172,7 @@
     "    nuclei_image = gaussian(stack[2,:,:],1)\n",
     "\n",
     "    model = models.Cellpose(gpu=use_gpu, model_type='nuclei',net_avg=False)\n",
-    "    mask_nuclei, _, _, _ = model.eval(nuclei_image, diameter, \n",
+    "    mask_nuclei, _, _, _ = model.eval(nuclei_image, diameter,batch_size=6, \n",
     "                                      flow_threshold=flow_threshold, channels=[0,0])\n",
     "    \n",
     "    if show_results is True:\n",
@@ -209,7 +192,7 @@
     "\n",
     "    model = models.Cellpose(gpu=use_gpu, model_type='cyto',net_avg=False)\n",
     "\n",
-    "    mask_cyto, _, _, _ = model.eval(stack, diameter=diameter, \n",
+    "    mask_cyto, _, _, _ = model.eval(stack, diameter=diameter, batch_size=6,\n",
     "                                    flow_threshold=flow_threshold, channels=[2,3])\n",
     "\n",
     "    if show_results == True:\n",
@@ -263,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +254,7 @@
     "folder_path = '/Users/robertwelch/Downloads/Multi_layer_test' #IF USING A PC: add r before string ie. r'/Users/robertwelch/Desktop/' instead of '/Users/robertwelch/Desktop/'\n",
     "\n",
     "#2. Run cell segmentation with GPU?:\n",
-    "use_gpu = False # if available, set to: True. Will automatically use CPU if no GPU is found.\n",
+    "use_gpu = True # if available, set to: True. Will automatically use CPU if no GPU is found.\n",
     "\n",
     "#3. Most Important Parameters to tune - LC3+ Detection parameters \n",
     "threshold_LC3 = 0.08 # Intensity threshold (Larger value results in less dots). Typical range: 0.03 - 0.2\n",
@@ -378,7 +361,7 @@
     "    proteins_in_each_cell = pd.DataFrame(proteins_in_each_cell) #Re-format to Dataframe object\n",
     "    \n",
     "    #Results header string - uses number tag before .nd2 at end of file name\n",
-    "    # if running on max\n",
+    "    # if running on mac\n",
     "    if os.name == 'posix':\n",
     "        split_image_path = image_path.split('/')\n",
     "    # If running on windows\n",
@@ -456,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
