Update batch size positional argumenet

--- a/Cellpose-Segmentation.ipynb
+++ b/Cellpose-Segmentation.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,8 +171,9 @@
     "    #Blur nuclei image\n",
     "    nuclei_image = gaussian(stack[2,:,:],1)\n",
     "\n",
+    "    # Lowered Batch_size from default 8 to reduce memory requirements\n",
     "    model = models.Cellpose(gpu=use_gpu, model_type='nuclei',net_avg=False)\n",
-    "    mask_nuclei, _, _, _ = model.eval(nuclei_image, diameter,batch_size=6, \n",
+    "    mask_nuclei, _, _, _ = model.eval(nuclei_image,batch_size = 6, diameter = diameter,\n",
     "                                      flow_threshold=flow_threshold, channels=[0,0])\n",
     "    \n",
     "    if show_results is True:\n",
@@ -192,7 +193,8 @@
     "\n",
     "    model = models.Cellpose(gpu=use_gpu, model_type='cyto',net_avg=False)\n",
     "\n",
-    "    mask_cyto, _, _, _ = model.eval(stack, diameter=diameter, batch_size=6,\n",
+    "    # Lowered Batch_size from default 8 to reduce memory requirements\n",
+    "    mask_cyto, _, _, _ = model.eval(stack,batch_size = 6, diameter=diameter, \n",
     "                                    flow_threshold=flow_threshold, channels=[2,3])\n",
     "\n",
     "    if show_results == True:\n",
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,6 +418,7 @@
     "        plt.tight_layout()\n",
     "        plt.savefig(os.path.join(new_storage_directory+'results-{0}.tiff'.format(file_number)),dpi = resolution)\n",
     "        plt.close('all')\n",
+    "        \n",
     "print('Finished, all images analyzed.')"
    ]
   }
